--- a/_data/nav/fr.yml
+++ b/_data/nav/fr.yml
@@ -1,8 +1,8 @@
 - title: "Home"
-  path: "/"
+  path: "/fr/"
 - title: "Discover"
-  path: "/discover"
+  path: "/fr/discover"
 - title: "Lausanne2020"
-  path: "/lausanne2020"
+  path: "/fr/lausanne2020"
 - title: "Contact"
-  path: "/contact"
+  path: "/fr/contact"
