--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ exclude_from_localizations: ["js","css","_sass"]
 contentful:
   spaces:
     - example: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID         # Required
+        space: <% ENV['ENV_CONTENTFUL_SPACE_ID'] %>         # Required
         access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
         cda_query:                  # Optional
           include: 2
