--- a/_config.yml
+++ b/_config.yml
@@ -37,7 +37,15 @@ exclude_from_localizations: ["js","css","_sass"]
 
 contentful:
   spaces:
-    - entries: # Jekyll _data folder identifier - Required
+    - news: # Jekyll _data folder identifier - Required
         space: ENV_CONTENTFUL_SPACE_ID # Required
         access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        destination: destination_in_data # Optional - Defaults to _data/contentful/spaces
+        cda_query:
+          content_type: news
+          order: -fields.date
+          limit: 3
+    - venues: # Jekyll _data folder identifier - Required
+        space: ENV_CONTENTFUL_SPACE_ID # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
+        cda_query:
+          content_type: venues
