--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -1,4 +1,28 @@
 pages:
+  index:
+    title1:
+      part1: Lausanne
+      part2: aux couleurs des jeux
+    title2:
+      part1: Mes
+      part2: jeux olympiques
+    title3:
+      part1: Jeux d'hiver
+      part2: de la jeunesse
+    about:
+      title: | 
+        ABOUT
+        THE YOG
+      texte: The Youth Olympic Games are an elite sporting event for young people from all over the world. The sports programme is based on that of the Olympic Games, with 28 sports featured on the summer programme and 7 on the winter programme.
+    shop:
+      title: Discover all the goodies in our marchandising partner shop!
+      button: Shop!
+    newsletter:
+      part1: Subscribe to receive news about
+      part2: Lausanne2020!
+      button: Subscribe!
+      thanks: Thank you! Your submission has been received!
+      oops: Oops! Something went wrong while submitting the form
   jobs:
     title: Emplois
     texte: "Merci pour l’intérêt que vous portez aux Jeux Olympiques de la jeunesse Lausanne 2020. \nNotre Comité d’Organisation n’a actuellement pas de postes à pourvoir. \nSi vous souhaitez soutenir Lausanne 2020 en tant que bénévole c’est par ici"
