--- a/_data/nav-header/en.yml
+++ b/_data/nav-header/en.yml
@@ -1,6 +1,6 @@
-- title: '<span class="icon-home"></span>'
+- title: "Home"
   path: "/"
 - title: "About"
-  path: "/About"
+  path: "/about"
 - title: "The sites"
   path: "/the-sites"
