New template for news on home page

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -9,6 +9,8 @@ pages:
     title3:
       part1: Jeux d'hiver
       part2: de la jeunesse
+    news:
+      title: Latest news
     about:
       title: | 
         ABOUT
