--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Lausanne 2020
+title: Your awesome title
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://boatman-snake-75507.netlify.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://localhost:4000/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
@@ -38,30 +38,10 @@ exclude_from_localizations: ["js","css","_sass"]
 
 contentful:
   spaces:
-    - news: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: news
-          order: -fields.date
-          limit: 3
-    - venues: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: venues
-    - sectionSites: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: sectionSites
-    - partnersLogos: # Jekyll _data folder identifier - Required
-        space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
-        cda_query:
-          content_type: partnersLogos
     - keyNumbers: # Jekyll _data folder identifier - Required
         space: ENV_CONTENTFUL_SPACE_ID # Required
-        access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
+        access_token: ENV_CONTENTFUL_ACCESS_TOKEN_PREVIEW # Required
+        client_options:             # Optional
+          api_url: 'preview.contentful.com' # Defaults to 'api.contentful.com' which is Production
         cda_query:
           content_type: keyNumbers
