--- a/_data/nav-footer/de.yml
+++ b/_data/nav-footer/de.yml
@@ -1,12 +1,12 @@
-- title: "Accueil"
+- title: "Home"
   path: "/de/"
-- title: "A propos"
+- title: "Über uns"
   path: "/de/about"
-- title: "Les sites"
+- title: "Wettkampfstätten"
   path: "/de/the-sites"
-- title: "Emplois"
+- title: "Jobs"
   path: "/de/jobs"
-- title: "Bénévoles"
+- title: "Volunteers"
   path: "/de/volunteers"
-- title: "Contact"
+- title: "Kontakt"
   path: "/de/contact"
