--- a/_data/nav-header/de.yml
+++ b/_data/nav-header/de.yml
@@ -1,6 +1,6 @@
-- title: "Accueil"
+- title: "Home"
   path: "/de/"
-- title: "A propos"
+- title: "Über uns"
   path: "/de/about"
-- title: "Les sites"
+- title: "Wettkampfstätten"
   path: "/de/the-sites"
