Translate home title

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -1,14 +1,14 @@
 pages:
   index:
     title1:
-      part1: Lausanne
-      part2: aux couleurs des jeux
+      part1: Lausanne 2020
+      part2: Hier beginnt alles!
     title2:
-      part1: Mes
-      part2: jeux olympiques
+      part1: Lausanne 2020
+      part2: Vermächtnis, Know-How, Innovation
     title3:
-      part1: Jeux d'hiver
-      part2: de la jeunesse
+      part1: Lausanne 2020
+      part2: Kultur, Sport, Bildung
     news:
       title: Latest news
     about:
