--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,14 +1,14 @@
 pages:
   index:
     title1:
-      part1: Lausanne
-      part2: aux couleurs des jeux
+      part1: Lausanne 2020
+      part2: This is where it starts!
     title2:
-      part1: Mes
-      part2: jeux olympiques
+      part1: Lausanne 2020
+      part2: Legacy, Expertise, Innovation
     title3:
-      part1: Jeux d'hiver
-      part2: de la jeunesse
+      part1: JLausanne 2020
+      part2: Culture, Sport, Education
     news:
       title: Latest news
     about:
