Translate news title

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -10,7 +10,7 @@ pages:
       part1: Lausanne 2020
       part2: Kultur, Sport, Bildung
     news:
-      title: Latest news
+      title: News
     about:
       title: Über
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
