--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -10,7 +10,7 @@ pages:
       part1: Lausanne 2020
       part2: Culture, Sport, Education 
     news:
-      title: Latest news
+      title: News
     about:
       title: A propos
       texte: Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans. Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport.
