--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -10,7 +10,7 @@ pages:
       part1: JLausanne 2020
       part2: Culture, Sport, Education
     news:
-      title: Latest news
+      title: News
     about:
       title: About
       texte: The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old. They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere.
