Translate shop section and remove link button top external shop

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -15,7 +15,7 @@ pages:
       title: Über
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
     shop:
-      title: Discover all the goodies in our marchandising partner shop!
+      title: Alle Lausanne 2020 Goodies demnächst verfügbar!
       button: Shop!
     newsletter:
       part1: Subscribe to receive news about
