--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -15,7 +15,7 @@ pages:
       title: About
       texte: The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old. They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere.
     shop:
-      title: Discover all the goodies in our marchandising partner shop!
+      title: All the Lausanne 2020 goodies available soon!
       button: Shop!
     newsletter:
       part1: Subscribe to receive news about
