Translate about page first sections

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -28,27 +28,25 @@ pages:
     title: Emplois
     texte: "Merci pour l’intérêt que vous portez aux Jeux Olympiques de la jeunesse Lausanne 2020. \nNotre Comité d’Organisation n’a actuellement pas de postes à pourvoir. \nSi vous souhaitez soutenir Lausanne 2020 en tant que bénévole c’est par ici"
   about:
-    title1: "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
+    title1: |
+            Die Olympischen Jugendspiele:
+            wetteifern, lernen und teilen!
     texte1: |
-            Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
+            Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren.
             
-            Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
+            Sie verbinden die sportliche Leistung, die Kultur sowie die Bildung in einem wahrhaften Sportfestival und haben zum Ziel, die Jugend zu ermutigen, die positiven Werte des Sports anzunehmen und zu leben. Dies sind der Respekt gegenüber anderen, sich selbst und unserer Umwelt, die Freundschaft zwischen Völkern und Kulturen und Höchstleistung durch Selbsthingabe. Weiter sollen die Jugendlichen die Sportbotschafter in der ganzen Welt werden.
             
-            Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
-    title2: "Lausanne 2020 se déroulera du 10 au 19 janvier 2020"
+            Durch ihre Mission streben die Olympischen Jugendspiele an, ein führendes Beispiel der Innovation für die Sportanlässe der Zukunft zu sein.
+    title2: Die Vision von Lausanne 2020
     texte2: |
-            La vision de Lausanne 2020 : 
+            Indem die Hinterlassenschaft sowie die Stärken der Schweiz ausgeschöpft werden, sollen die Werte der Olympischen Bewegung Freundschaft, Höchstleistung und Respekt durch die Bildung, die Kultur, die Innovation und den Sport gelebt werden, indem einzigartige und vereinende Olympische Jugendspiele organisiert werden, welche sich für eine bessere Welt einsetzen.
 
-            En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
+            In diesem Sinne verfolgt Lausanne 2020 folgende Missionen:
+            - Organisation von innovativen Olympischen Jugendspielen in gemeinsamer Erarbeitung mit dem IOC
+            - Schaffen von Gelegenheiten für alle Stakeholders, um sich die Olympischen Jugendspiele anzueignen und sich aktiv für die Realisierung ihrer eigenen Ziele einzusetzen
+            - Involvieren und Vereinigen der ganzen Region, des ganzen Landes und des benachbarten Frankreichs um ein vereinendes Event zu gestalten, welches positive Energie verbreitet
+            - Fördern von Frieden zwischen Völkern indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
 
-            Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
-
-            Délivrer des Jeux Olympiques de la Jeunesse novateurs en les co construisant avec le CIO
-
-            Créer l’opportunité pour l’ensemble des parties prenantes de s’approprier les Jeux Olympiques de la Jeunesse en leur permettant de s’engager activement pour la réalisation de leurs propres objectifs 
-
-            Fédérer et faire participer toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive
-
-            Promouvoir la paix entre les peuples en créant un environnement propice au « vivre ensemble"
+            Lausanne 2020 findet vom 10. bis 19. Januar 2020 statt.
     sports_title: Les sports
     sports_texte: "Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
