--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -28,27 +28,26 @@ pages:
     title: Emplois
     texte: "Merci pour l’intérêt que vous portez aux Jeux Olympiques de la jeunesse Lausanne 2020. \nNotre Comité d’Organisation n’a actuellement pas de postes à pourvoir. \nSi vous souhaitez soutenir Lausanne 2020 en tant que bénévole c’est par ici"
   about:
-    title1: "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
+    title1: |
+            The Youth Olympic Games:
+            Compete, learn and share!
     texte1: |
-            Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
+            The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old.
             
-            Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
+            They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere. The aim is to encourage youth to adopt and represent the positive values of sport - respect for others, for themselves and for our environment, friendship between people and cultures, excellence in self-giving, and to become sport ambassadors throughout the world.
             
-            Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
-    title2: "Lausanne 2020 se déroulera du 10 au 19 janvier 2020"
+            Through its mission, the Youth Olympic Games aspire to be a leading example of innovation for sporting events of the future.
+    title2: The vision of Lausanne 2020
     texte2: |
-            La vision de Lausanne 2020 : 
+            To draw upon the legacy and strengths of Switzerland and live the Olympic values of friendship, excellence and respect through education, culture, innovation and sport, while organizing Youth Olympic Games that are unique and unifying in promoting a better world.
 
-            En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
+            In this spirit Lausanne 2020 set the following mission:
+            - <b>Deliver</b> an innovative Youth Olympic Games in full co-construction with the IOC.
+            - <b>Create</b> an opportunity for all stakeholders to take <b>ownership</b> of the Youth Olympic Games, allowing them to <b>actively engage</b> in achieving their own goals
+            - <b>Enhance</b> the cultural and educational aspects of sport by providing high visibility to all facets of the concept of the Youth Olympic Games.
+            - <b>Unite</b> and involve the whole region, the country of Switzerland, as well as neighboring France, to create a unifying event that spreads positivity.
+            - <b>Promote</b> values of peace between people by creating an environment conducive to “living together”.
 
-            Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
-
-            Délivrer des Jeux Olympiques de la Jeunesse novateurs en les co construisant avec le CIO
-
-            Créer l’opportunité pour l’ensemble des parties prenantes de s’approprier les Jeux Olympiques de la Jeunesse en leur permettant de s’engager activement pour la réalisation de leurs propres objectifs 
-
-            Fédérer et faire participer toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive
-
-            Promouvoir la paix entre les peuples en créant un environnement propice au « vivre ensemble"
+            Lausanne 2020 will take place from January 10th to 19th , 2020.
     sports_title: Les sports
     sports_texte: "Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
