--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -28,27 +28,26 @@ pages:
     title: Emplois
     texte: "Merci pour l’intérêt que vous portez aux Jeux Olympiques de la jeunesse Lausanne 2020. \nNotre Comité d’Organisation n’a actuellement pas de postes à pourvoir. \nSi vous souhaitez soutenir Lausanne 2020 en tant que bénévole c’est par ici"
   about:
-    title1: "Les Jeux Olympiques de la Jeunesse : Concourir, apprendre et partager !"
+    title1: |
+            Les Jeux Olympiques de la Jeunesse : 
+            Concourir, apprendre et partager !
     texte1: |
             Les Jeux Olympiques de la Jeunesse sont un événement sportif olympique international du plus haut niveau pour les athlètes âgés de 15 à 18 ans.
             
             Ils associent la performance sportive, la culture et l'éducation dans un réel festival du sport. Ils ont comme objectif d’encourager la jeunesse à adopter et vivre selon les valeurs positives du sport – le respect de l’autre, de soi, de notre environnement, l’amitié entre les peuples et les cultures, l’excellence dans le don de soi – et à en devenir les ambassadeurs à travers le monde.
             
             Par leur vocation, les Jeux Olympiques de la Jeunesse veulent être un incubateur d’innovation pour les événements sportifs du futur.
-    title2: "Lausanne 2020 se déroulera du 10 au 19 janvier 2020"
+    title2: La vision de Lausanne 2020
     texte2: |
-            La vision de Lausanne 2020 : 
-
             En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
 
             Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
+            - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO
+            - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs
+            - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux de la Jeunesse
+            - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive
+            - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble »
 
-            Délivrer des Jeux Olympiques de la Jeunesse novateurs en les co construisant avec le CIO
-
-            Créer l’opportunité pour l’ensemble des parties prenantes de s’approprier les Jeux Olympiques de la Jeunesse en leur permettant de s’engager activement pour la réalisation de leurs propres objectifs 
-
-            Fédérer et faire participer toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive
-
-            Promouvoir la paix entre les peuples en créant un environnement propice au « vivre ensemble"
+            Lausanne 2020 se déroulera du 10 au 19 Janvier 2020 !
     sports_title: Les sports
     sports_texte: "Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
