--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -48,5 +48,53 @@ pages:
             - Fördern von Frieden zwischen Völkern indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
 
             Lausanne 2020 findet vom 10. bis 19. Januar 2020 statt.
-    sports_title: Les sports
-    sports_texte: "Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
+    sports_title: Die Sportarten
+    sports_texte: "Das sportliche Programm der dritten Olympischen Winterspiele der Jugend ähnelt dem der Olympischen Winterspiele, beinhält aber Variationen und Innovationen in den von den Internationalen Verbänden angebotenen Disziplinen. Die Sportarten, die auf dem Programm stehen sind:"
+    sports:
+      biathlon:
+        text: Biathlon
+        link: "https://www.olympic.org/fr/biathlon"
+      bobsleigh:
+        text: Bob
+        link: "https://www.olympic.org/bobsleigh"
+      combine-nordique:
+        text: Nordische Kombination
+        link: "https://www.olympic.org/nordic-combined"
+      curling:
+        text: Curling
+        link: "https://www.olympic.org/curling"
+      hockey-sur-glace:
+        text: Eishockey
+        link: "https://www.olympic.org/ice-hockey"
+      luge:
+        text: Rodeln
+        link: "https://www.olympic.org/luge"
+      patinage-artistique:
+        text: Eiskunstlauf
+        link: "https://www.olympic.org/figure-skating"
+      patinage-vitesse:
+        text: Schnelleislauf
+        link: "https://www.olympic.org/speed-skating"
+      short-track:
+        text: Short track
+        link: "https://www.olympic.org/short-track-speed-skating"
+      saut-a-ski:
+        text: Skispringen
+        link: "https://www.olympic.org/ski-jumping"
+      skeleton:
+        text: Skeleton
+        link: "https://www.olympic.org/skeleton"
+      ski-freestyle:
+        text: Skiakrobatik / Freeski
+        link: "https://www.olympic.org/freestyle-skiing"
+      ski-alpin:
+        text: Ski alpin
+        link: "https://www.olympic.org/alpine-skiing"
+      ski-de-fond:
+        text: Langlauf
+        link: "https://www.olympic.org/cross-country-skiing"
+      snowboard:
+        text: Snowboard
+        link: "https://www.olympic.org/snowboard"
+    sports_fin: Entdecke die Wettkampfstätten
+    sports_fin_link: "/de/the-sites"
