--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -49,5 +49,53 @@ pages:
             - <b>Promote</b> values of peace between people by creating an environment conducive to “living together”.
 
             Lausanne 2020 will take place from January 10th to 19th , 2020.
-    sports_title: Les sports
-    sports_texte: "Le programme sportif des Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
+    sports_title: Sports
+    sports_texte: "The sports programme of the 3rd edition of the Winter Youth Olympic Games is similar to the programme of the Winter Olympic Games with variations and innovations in the disciplines that are proposed by the International Federations. The sports on the programme are:"
+    sports:
+      biathlon:
+        text: Biathlon
+        link: "https://www.olympic.org/fr/biathlon"
+      bobsleigh:
+        text: Bobsleigh
+        link: "https://www.olympic.org/bobsleigh"
+      combine-nordique:
+        text: Nordic combined
+        link: "https://www.olympic.org/nordic-combined"
+      curling:
+        text: Curling
+        link: "https://www.olympic.org/curling"
+      hockey-sur-glace:
+        text: Ice Hockey
+        link: "https://www.olympic.org/ice-hockey"
+      luge:
+        text: Luge
+        link: "https://www.olympic.org/luge"
+      patinage-artistique:
+        text: Figure skating
+        link: "https://www.olympic.org/figure-skating"
+      patinage-vitesse:
+        text: Speed skating
+        link: "https://www.olympic.org/speed-skating"
+      short-track:
+        text: Short track speed skating
+        link: "https://www.olympic.org/short-track-speed-skating"
+      saut-a-ski:
+        text: Ski jumping
+        link: "https://www.olympic.org/ski-jumping"
+      skeleton:
+        text: Skeleton
+        link: "https://www.olympic.org/skeleton"
+      ski-freestyle:
+        text: Freestyle skiing
+        link: "https://www.olympic.org/freestyle-skiing"
+      ski-alpin:
+        text: Alpine skiing
+        link: "https://www.olympic.org/alpine-skiing"
+      ski-de-fond:
+        text: Cross country skiing
+        link: "https://www.olympic.org/cross-country-skiing"
+      snowboard:
+        text: Snowboard
+        link: "https://www.olympic.org/snowboard"
+    sports_fin: Discover the venues here
+    sports_fin_link: "/the-sites"
