Add meta description

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -1,3 +1,5 @@
+meta:
+  desc: "Lausanne 2020 – die dritten Olympischen Winter Jugendspiele, welche vom 10. Bis 19. Januar 2020 stattfinden. Die Wettkampfstätten sind folgende : Lausanne, Morges, Vallée de Joux, les Tuffes, Leysin, Villars, les Diablerets und St. Moritz"
 pages:
   index:
     title1:
