--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -1,3 +1,5 @@
+meta: 
+  desc: "Lausanne 2020 – the 3rd Winter Youth Olympic Games will be held from January 10th to 19th 2020. The competition venues are : Lausanne, Morges, Vallée de Joux, les Tuffes, Leysin, Villars, les Diablerets and St. Moritz"
 pages:
   index:
     title1:
