--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -1,3 +1,5 @@
+meta: 
+  desc: "Lausanne 2020 – les 3ème Jeux Olympiques de la Jeunesse d’hiver ont lieu du 10 au 19 janvier 2020. Les sites de compétition sont : Lausanne, Morges, Vallée de Joux, les Tuffes, Leysin, Villars, les Diablerets et St. Moritz"
 pages:
   index:
     title1:
