--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ contentful:
         access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
         cda_query:
           content_type: sectionSites
+          order: -sys.createdAt
     - partnersLogos: # Jekyll _data folder identifier - Required
         space: ENV_CONTENTFUL_SPACE_ID # Required
         access_token: ENV_CONTENTFUL_ACCESS_TOKEN # Required
