--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -101,3 +101,9 @@ pages:
         link: "https://www.olympic.org/snowboard"
     sports_fin: Discover the venues here
     sports_fin_link: "/the-sites"
+footer:
+  link:
+    tokyo: "https://tokyo2020.jp/en/"
+    beijing: "http://www.beijing2022.cn/en/"
+    buenos: "http://www.buenosaires2018.com/en/"
+    pyeongChang: "https://www.pyeongchang2018.com/en/index"
