Add true link for volunteers

--- a/_data/nav-footer/de.yml
+++ b/_data/nav-footer/de.yml
@@ -7,6 +7,6 @@
 - title: "Jobs"
   path: "/de/jobs"
 - title: "Volunteers"
-  path: "/de/volunteers"
+  path: "http://volunteers.lausanne2020.com"
 - title: "Kontakt"
   path: "/de/contact"
