--- a/_data/nav-footer/fr.yml
+++ b/_data/nav-footer/fr.yml
@@ -7,6 +7,6 @@
 - title: "Emplois"
   path: "/fr/jobs"
 - title: "Bénévoles"
-  path: "/fr/volunteers"
+  path: "http://volunteers.lausanne2020.com"
 - title: "Contact"
   path: "/fr/contact"
