Rename "the sites" to "venues"

--- a/_data/nav-footer/en.yml
+++ b/_data/nav-footer/en.yml
@@ -2,8 +2,8 @@
   path: "/"
 - title: "About"
   path: "/about"
-- title: "The sites"
-  path: "/the-sites"
+- title: "Venues"
+  path: "/venues"
 - title: "Jobs"
   path: "/jobs"
 - title: "Volunteers"
