--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -9,7 +9,7 @@ pages:
       part1: Lausanne 2020
       part2: Legacy, Expertise, Innovation
     title3:
-      part1: JLausanne 2020
+      part1: Lausanne 2020
       part2: Culture, Sport, Education
     news:
       title: News
