Fix About section on home page

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -16,6 +16,7 @@ pages:
     about:
       title: Über
       texte: Die Olympischen Jugendspiele sind ein internationaler Olympischer Spitzensportanlass für Athleten im Alter von 15 bis 18 Jahren. Sie verbinden die sportliche Höchstleistung, die Kultur, sowie die Bildung in einem wahrhaften Sportfestival.
+      more: Mehr infos
     shop:
       title: Alle Lausanne 2020 Goodies demnächst verfügbar!
       button: Los geht’s
