--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -16,6 +16,7 @@ pages:
     about:
       title: About
       texte: The Youth Olympic Games are an international Olympic sporting event of the highest level for athletes aged 15 to 18 years old. They combine sport performance, culture and education in an authentic celebration of sport with a festive atmosphere.
+      more: More
     shop:
       title: All the Lausanne 2020 goodies available soon!
       button: Shop!
