Rename venues everywhere

--- a/_data/nav-footer/de.yml
+++ b/_data/nav-footer/de.yml
@@ -3,7 +3,7 @@
 - title: "Über uns"
   path: "/de/about"
 - title: "Wettkampfstätten"
-  path: "/de/the-sites"
+  path: "/de/venues"
 - title: "Jobs"
   path: "/de/jobs"
 - title: "Volunteers"
