--- a/_data/nav-footer/fr.yml
+++ b/_data/nav-footer/fr.yml
@@ -3,7 +3,7 @@
 - title: "A propos"
   path: "/fr/about"
 - title: "Les sites"
-  path: "/fr/the-sites"
+  path: "/fr/venues"
 - title: "Emplois"
   path: "/fr/jobs"
 - title: "Bénévoles"
