Update about page texts

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -45,10 +45,11 @@ pages:
             Indem die Hinterlassenschaft sowie die Stärken der Schweiz ausgeschöpft werden, sollen die Werte der Olympischen Bewegung Freundschaft, Höchstleistung und Respekt durch die Bildung, die Kultur, die Innovation und den Sport gelebt werden, indem einzigartige und vereinende Olympische Jugendspiele organisiert werden, welche sich für eine bessere Welt einsetzen.
 
             In diesem Sinne verfolgt Lausanne 2020 folgende Missionen:
-            - Organisation von innovativen Olympischen Jugendspielen in gemeinsamer Erarbeitung mit dem IOC
-            - Schaffen von Gelegenheiten für alle Stakeholders, um sich die Olympischen Jugendspiele anzueignen und sich aktiv für die Realisierung ihrer eigenen Ziele einzusetzen
-            - Involvieren und Vereinigen der ganzen Region, des ganzen Landes und des benachbarten Frankreichs um ein vereinendes Event zu gestalten, welches positive Energie verbreitet
-            - Fördern von Frieden zwischen Völkern indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
+            - <b>Organisieren</b> von innovativen Olympischen Jugendspielen in gemeinsamer Erarbeitung mit dem IOC.
+            - <b>Schaffen</b> von Gelegenheiten für alle Stakeholders, um sich die Olympischen Jugendspiele <b>anzueignen</b> und sich <b>aktiv</b> für die Realisierung ihrer eigenen Ziele <b>einzusetzen</b>.
+            - <b>Stärken</b> der kulturellen und pädagogischen Aspekte des Sports indem allen Facetten des Konzepts des Olympischen Jugendspiele grosse Aufmerksamkeit geschenkt wird.
+            - <b>Involvieren und Vereinen</b> der ganzen Region, des ganzen Landes und des benachbarten Frankreichs um ein vereinendes Event zu gestalten, welches positive Energie verbreitet.
+            - <b>Fördern</b> von Frieden zwischen Völkern indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
 
             Lausanne 2020 findet vom 10. bis 19. Januar 2020 statt.
     sports_title: Die Sportarten
