--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -46,7 +46,7 @@ pages:
 
             In this spirit Lausanne 2020 set the following mission:
             - <b>Deliver</b> an innovative Youth Olympic Games in full co-construction with the IOC.
-            - <b>Create</b> an opportunity for all stakeholders to take <b>ownership</b> of the Youth Olympic Games, allowing them to <b>actively engage</b> in achieving their own goals
+            - <b>Create</b> an opportunity for all stakeholders to take <b>ownership</b> of the Youth Olympic Games, allowing them to <b>actively engage</b> in achieving their own goals.
             - <b>Enhance</b> the cultural and educational aspects of sport by providing high visibility to all facets of the concept of the Youth Olympic Games.
             - <b>Unite</b> and involve the whole region, the country of Switzerland, as well as neighboring France, to create a unifying event that spreads positivity.
             - <b>Promote</b> values of peace between people by creating an environment conducive to “living together”.
