--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -45,11 +45,11 @@ pages:
             En puisant dans l’héritage et les atouts de la Suisse, vivre les valeurs du mouvement olympique que sont l’amitié, l’excellence et le respect au travers de la formation, la culture, l’innovation et le sport en organisant des Jeux Olympiques de la Jeunesse, uniques et rassembleurs, au service de la promotion d’un monde meilleur.
 
             Dans cet esprit, Lausanne 2020 s’est donné pour mission de :
-            - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO
-            - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs
-            - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux de la Jeunesse
-            - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive
-            - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble »
+            - <b>Délivrer</b> des Jeux Olympiques de la Jeunesse novateurs en les co-construisant avec le CIO.
+            - <b>Créer</b> l’opportunité pour l’ensemble des parties prenantes de <b>s’approprier</b> les Jeux Olympiques de la Jeunesse en leur permettant de <b>s’engager activement</b> pour la réalisation de leurs propres objectifs.
+            - <b>Valoriser</b> les aspects culturels et éducatifs du sport en donnant une visibilité forte à toutes les facettes du concept des Jeux de la Jeunesse.
+            - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive.
+            - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble ».
 
             Lausanne 2020 se déroulera du 10 au 19 Janvier 2020 !
     sports_title: Les sports
