Update about page texts

--- a/_i18n/de.yml
+++ b/_i18n/de.yml
@@ -51,7 +51,7 @@ pages:
             - <b>Involvieren und Vereinen</b> der ganzen Region, des ganzen Landes und des benachbarten Frankreichs um ein vereinendes Event zu gestalten, welches positive Energie verbreitet.
             - <b>Fördern</b> von Frieden zwischen Völkern indem eine gesunde Umgebung für das Zusammenleben kreiert wird.
 
-            Lausanne 2020 findet vom 10. bis 19. Januar 2020 statt.
+            <span class="important-dates">Lausanne 2020 findet vom 10. bis 19. Januar 2020 statt.</span>
     sports_title: Die Sportarten
     sports_texte: "Das sportliche Programm der dritten Olympischen Winterspiele der Jugend ähnelt dem der Olympischen Winterspiele, beinhält aber Variationen und Innovationen in den von den Internationalen Verbänden angebotenen Disziplinen. Die Sportarten, die auf dem Programm stehen sind:"
     sports:
