--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -51,7 +51,7 @@ pages:
             - <b>Unite</b> and involve the whole region, the country of Switzerland, as well as neighboring France, to create a unifying event that spreads positivity.
             - <b>Promote</b> values of peace between people by creating an environment conducive to “living together”.
 
-            Lausanne 2020 will take place from January 10th to 19th , 2020.
+            <span class="important-dates">Lausanne 2020 will take place from January 10th to 19th , 2020.</span>
     sports_title: Sports
     sports_texte: "The sports programme of the 3rd edition of the Winter Youth Olympic Games is similar to the programme of the Winter Olympic Games with variations and innovations in the disciplines that are proposed by the International Federations. The sports on the programme are:"
     sports:
