--- a/_i18n/fr.yml
+++ b/_i18n/fr.yml
@@ -51,7 +51,7 @@ pages:
             - <b>Fédérer et faire participer</b> toute la région, l’ensemble du pays ainsi que la France voisine autour d’un événement rassembleur et diffuseur d’énergie positive.
             - <b>Promouvoir</b> la paix entre les peuples en créant un environnement propice au « vivre ensemble ».
 
-            Lausanne 2020 se déroulera du 10 au 19 Janvier 2020 !
+            <span class="important-dates">Lausanne 2020 se déroulera du 10 au 19 Janvier 2020 !</span>
     sports_title: Les sports
     sports_texte: "Le programme sportif des 3ème Jeux Olympiques de la Jeunesse d’hiver s’apparente au programme des Jeux Olympiques d’hiver, avec des variations et innovations dans les disciplines proposées par les fédérations internationales. Les sports au programme sont :"
     sports:
